--- a/src/html/intelligent_real_words_01.html
+++ b/src/html/intelligent_real_words_01.html
@@ -255,13 +255,13 @@
           基础知识
           <ol class="breadcrumb">
             <li>
-              <a href="./intelligent_test.html">同步智测</a>
+              <a href="./intelligent_real.html">高考冲刺</a>
             </li>
             <li>
-              <a href="./intelligent_test_unit.html">分卷</a>
+              <a href="./intelligent_real_detail_small.html">试题</a>
             </li>
             <li>
-              <a href="./intelligent_test_unit_unit.html">卷内试题目录</a>
+              <a href="./intelligent_real_unit_small.html">卷内试题目录</a>
             </li>
             <li class="active">词汇与语法1</li>
           </ol>
@@ -294,7 +294,7 @@
                 <form class="form-horizontal">
                   <div class="xc-mb10">
                     <a class="btn btn-primary">保存</a>
-                    <a class="btn btn-default">清空代码</a>
+                    <a class="btn btn-default">清空本页</a>
                   </div>
                   <div class="form-group">
                     <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
