--- a/src/html/intelligent_real_write_small.html
+++ b/src/html/intelligent_real_write_small.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>智能培优-真题冲刺</title>
+  <title>同步智测-写作</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -25,10 +25,10 @@
 
 
 
-
-
-
   <link rel="stylesheet" href="../css/main_xc.css">
+
+
+
 </head>
 
 <body>
@@ -71,7 +71,6 @@
       </nav>
     </header>
     <!-- endbuild -->
-
 
 
 
@@ -249,46 +248,58 @@
 
 
 
-
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          中考冲刺-真题模拟题一
+          阅读理解
           <ol class="breadcrumb">
             <li>
-              <a href="./intelligent_real.html">真题冲刺</a>
+              <a href="./intelligent_real.html">高考冲刺</a>
             </li>
             <li>
-              <a href="./intelligent_real_detail_small.html">试卷列表</a>
+              <a href="./intelligent_real_detail_small.html">试题</a>
             </li>
-            <li class="active">真题模拟题一</li>
+            <li>
+              <a href="./intelligent_real_unit_small.html">卷内试题目录</a>
+            </li>
+            <li class="active">写作</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="xc-text-group col-xs-6 center-block">
-              <div class="xc-text-item">
-                <a href="./intelligent_real_hearing_small_01.html">听力测试
-                  <br>（未录入）
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./intelligent_real_words_01.html">词汇与语法
-                  <br>
-                  <span class="error">(未完成)</span>
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./intelligent_real_read_c01.html">阅读理解
-                  <br>（未录入）
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./intelligent_real_write_small.html">写作
-                  <br>
-                  <span class="error">(未完成)</span>
-                </a>
+            <div class="panel-default">
+              <div class="panel-heading">
+                <form class="form-horizontal">
+                  <div class="xc-mb10">
+                    <a class="btn btn-primary">保存</a>
+                    <a class="btn btn-default">清空本页</a>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="请在30分钟内，根据下面所给的题目用英语写出一篇不少于80词的短文。" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label xc-nowrap">作文题：</label>
+                    <div class="col-lg-11">
+                      <textarea type="text" placeholder="请输入作文题目" rows="10" class="form-control"></textarea>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label xc-nowrap">范文标题：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="输入范文标题" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label xc-nowrap">范文：</label>
+                    <div class="col-lg-11">
+                      <textarea type="text" placeholder="请输入范文内容" rows="10" class="form-control"></textarea>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
@@ -302,7 +313,6 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
-
 
 
 
@@ -335,8 +345,7 @@
 
 
 
-
-
+  <script src="../js/intelligent.js"></script>
 
 
 
