--- a/src/html/intelligent_real_detail_small.html
+++ b/src/html/intelligent_real_detail_small.html
@@ -264,6 +264,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
+              <a href="javascript:history.go(-1)" class="btn btn-primary">返回</a>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#add">新增试卷</button>
             <table class="table table-words">
               <thead>
