--- a/src/html/intelligent_real_words_03.html
+++ b/src/html/intelligent_real_words_03.html
@@ -294,7 +294,7 @@
                 <form class="form-horizontal">
                   <div class="xc-mb10">
                     <a class="btn btn-primary">保存</a>
-                    <a class="btn btn-default">清空代码</a>
+                    <a class="btn btn-default">清空本页</a>
                   </div>
                   <div class="form-group">
                     <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
