--- a/src/html/synchronize_unit_text.html
+++ b/src/html/synchronize_unit_text.html
@@ -84,158 +84,158 @@
 
     <!-- build:sidebar -->
     <!-- 左侧菜单 -->
-<aside class="aside">
-  <div class="aside-inner">
-    <nav data-sidebar-anyclick-close="" class="sidebar">
-      <ul class="nav">
-        <li class="nav-heading ">
-          <span>课程管理</span>
-        </li>
-        <li class=" ">
-          <a href="synchronize.html" title="同步课程">
-            <em class="icon-refresh"></em>
-            <span>同步课程</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="grammar.html" title="搞定语法">
-            <em class="icon-book-open"></em>
-            <span>搞定语法</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="#intelligent" title="智能培优" data-toggle="collapse">
-            <em class="icon-graph"></em>
-            <span>智能培优</span>
-          </a>
-          <ul id="intelligent" class="nav sidebar-subnav collapse">
-            <li class="sidebar-subnav-header">智能培优</li>
+    <aside class="aside">
+      <div class="aside-inner">
+        <nav data-sidebar-anyclick-close="" class="sidebar">
+          <ul class="nav">
+            <li class="nav-heading ">
+              <span>课程管理</span>
+            </li>
             <li class=" ">
-              <a href="intelligent_test.html" title="同步智测">
-                <span>同步智测</span>
+              <a href="synchronize.html" title="同步课程">
+                <em class="icon-refresh"></em>
+                <span>同步课程</span>
               </a>
             </li>
             <li class=" ">
-              <a href="intelligent_real.html" title="真题冲刺">
-                <span>真题冲刺</span>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-heading ">
-          <span>教务管理</span>
-        </li>
-        <li class=" ">
-          <a href="datastatistics.html" title="数据统计">
-            <em class="icon-speedometer"></em>
-            <span>数据统计</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="groupcoursemanagement.html" title="学员组课程管理">
-            <em class="icon-layers"></em>
-            <span>学员组课程管理</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="#schoolmanagement" title="学校管理" data-toggle="collapse">
-            <em class="icon-home"></em>
-            <span>学校管理</span>
-          </a>
-          <ul id="schoolmanagement" class="nav sidebar-subnav collapse">
-            <li class="sidebar-subnav-header">学校管理</li>
-            <li class=" ">
-              <a href="schoolmanagement_list.html" title="学校列表">
-                <span>学校列表</span>
+              <a href="grammar.html" title="搞定语法">
+                <em class="icon-book-open"></em>
+                <span>搞定语法</span>
               </a>
             </li>
             <li class=" ">
-              <a href="schoolmanagement_sales.html" title="销售数据">
-                <span>销售数据</span>
+              <a href="#intelligent" title="智能培优" data-toggle="collapse">
+                <em class="icon-graph"></em>
+                <span>智能培优</span>
+              </a>
+              <ul id="intelligent" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">智能培优</li>
+                <li class=" ">
+                  <a href="intelligent_test.html" title="同步智测">
+                    <span>同步智测</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="intelligent_real.html" title="真题冲刺">
+                    <span>真题冲刺</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-heading ">
+              <span>教务管理</span>
+            </li>
+            <li class=" ">
+              <a href="datastatistics.html" title="数据统计">
+                <em class="icon-speedometer"></em>
+                <span>数据统计</span>
               </a>
             </li>
             <li class=" ">
-              <a href="schoolmanagement_setting.html" title="扣费设置">
-                <span>扣费设置</span>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class=" ">
-          <a href="#teachermanagement" title="教师管理" data-toggle="collapse">
-            <em class="icon-people"></em>
-            <span>教师管理</span>
-          </a>
-          <ul id="teachermanagement" class="nav sidebar-subnav collapse">
-            <li class="sidebar-subnav-header">教师管理</li>
-            <li class=" ">
-              <a href="teachermanagement_list.html" title="教师列表">
-                <span>教师列表</span>
+              <a href="groupcoursemanagement.html" title="学员组课程管理">
+                <em class="icon-layers"></em>
+                <span>学员组课程管理</span>
               </a>
             </li>
             <li class=" ">
-              <a href="teachermanagement_sales.html" title="销售数据">
-                <span>销售数据</span>
+              <a href="#schoolmanagement" title="学校管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>学校管理</span>
               </a>
-            </li>
-          </ul>
-        </li>
-        <li class=" ">
-          <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
-            <em class="icon-graduation"></em>
-            <span>学生管理</span>
-          </a>
-          <ul id="studentmanagement" class="nav sidebar-subnav collapse">
-            <li class="sidebar-subnav-header">学生管理</li>
-            <li class=" ">
-              <a href="studentmanagement_unallocated.html" title="未分配学生列表">
-                <span>未分配学生列表</span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="studentmanagement_allocated.html" title="已分配学生列表">
-                <span>已分配学生列表</span>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class=" ">
-          <a href="#mallmanagement" title="商城管理" data-toggle="collapse">
-            <em class="icon-present"></em>
-            <span>商城管理</span>
-          </a>
-          <ul id="mallmanagement" class="nav sidebar-subnav collapse">
-            <li class="sidebar-subnav-header">商城管理</li>
-            <li class=" ">
-              <a href="mallmanagement_commodity.html" title="商品管理">
-                <span>商品管理</span>
-              </a>
+              <ul id="schoolmanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学校管理</li>
+                <li class=" ">
+                  <a href="schoolmanagement_list.html" title="学校列表">
+                    <span>学校列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="schoolmanagement_sales.html" title="销售数据">
+                    <span>销售数据</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="schoolmanagement_setting.html" title="扣费设置">
+                    <span>扣费设置</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class=" ">
-              <a href="mallmanagement_order.html" title="订单管理">
-                <span>订单管理</span>
+              <a href="#teachermanagement" title="教师管理" data-toggle="collapse">
+                <em class="icon-people"></em>
+                <span>教师管理</span>
               </a>
+              <ul id="teachermanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">教师管理</li>
+                <li class=" ">
+                  <a href="teachermanagement_list.html" title="教师列表">
+                    <span>教师列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="teachermanagement_sales.html" title="销售数据">
+                    <span>销售数据</span>
+                  </a>
+                </li>
+              </ul>
             </li>
-          </ul>
-        </li>
-        <li class=" ">
-          <a href="#admin" title="运营账号管理" data-toggle="collapse">
-            <em class="icon-present"></em>
-            <span>运营账号管理</span>
-          </a>
-          <ul id="admin" class="nav sidebar-subnav collapse">
-            <li class="sidebar-subnav-header">运营账号管理</li>
             <li class=" ">
-              <a href="admin.html" title="运营账号管理">
+              <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
+                <em class="icon-graduation"></em>
+                <span>学生管理</span>
+              </a>
+              <ul id="studentmanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学生管理</li>
+                <li class=" ">
+                  <a href="studentmanagement_unallocated.html" title="未分配学生列表">
+                    <span>未分配学生列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studentmanagement_allocated.html" title="已分配学生列表">
+                    <span>已分配学生列表</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
+              <a href="#mallmanagement" title="商城管理" data-toggle="collapse">
+                <em class="icon-present"></em>
+                <span>商城管理</span>
+              </a>
+              <ul id="mallmanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">商城管理</li>
+                <li class=" ">
+                  <a href="mallmanagement_commodity.html" title="商品管理">
+                    <span>商品管理</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="mallmanagement_order.html" title="订单管理">
+                    <span>订单管理</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
+              <a href="#admin" title="运营账号管理" data-toggle="collapse">
+                <em class="icon-present"></em>
                 <span>运营账号管理</span>
               </a>
+              <ul id="admin" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">运营账号管理</li>
+                <li class=" ">
+                  <a href="admin.html" title="运营账号管理">
+                    <span>运营账号管理</span>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</aside>
+        </nav>
+      </div>
+    </aside>
     <!-- endbuild -->
 
 
@@ -261,6 +261,9 @@
             </li>
             <li class="active">课文编辑</li>
           </ol>
+          <div class='mt10 xc-clearfix'>
+            <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
+          </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
@@ -280,9 +283,9 @@
                           <h4>录入句子</h4>
                           <div class="form-group-box">
                             <div class="form-group col-xs-12">
-                              <label class="col-lg-1 control-label">第一句：</label>
+                              <label class="col-lg-1 control-label">第1句：</label>
                               <div class="col-lg-11">
-                                <a class="btn btn-default">删除</a>
+                                <a class="btn btn-default jq-delete-text-ju">删除</a>
                               </div>
                             </div>
                             <div class="form-group col-xs-12">
@@ -300,18 +303,18 @@
                             <div class="form-group col-xs-12">
                               <label class="col-lg-1 control-label">发音：</label>
                               <div class="col-lg-11">
-                                  <div class="fileinput-box">
-                                      <span class="btn btn-default fileinput-button">
-                                        <i class="fa fa-fw fa-upload"></i>
-                                        <span>上传文件</span>
-                                        <input type="file" class="file-ipt" name="files[]">
-                                      </span>
-                                      <p class="audio-type">支持扩展名：mp3</p>
-                                    </div>
+                                <div class="fileinput-box">
+                                  <span class="btn btn-default fileinput-button">
+                                    <i class="fa fa-fw fa-upload"></i>
+                                    <span>上传文件</span>
+                                    <input type="file" class="file-ipt" name="files[]">
+                                  </span>
+                                  <p class="audio-type">支持扩展名：mp3</p>
+                                </div>
                               </div>
                             </div>
                           </div>
-                          <a class="btn btn-default"> + 增加句子</a>
+                          <a class="btn btn-default jq-add-text-ju"> + 增加句子</a>
                         </div>
                       </form>
                     </li>
@@ -397,14 +400,14 @@
                           <div class="form-group col-xs-12">
                             <label class="col-lg-1 control-label">发音：</label>
                             <div class="col-lg-11 tab-input-group">
-                              <div>
-                                <span class="btn btn-default jq-fileinput-button">
-                                  <i class="fa fa-fw fa-upload"></i>
-                                  <span>上传文件</span>
-                                </span>
-                                <p>支持扩展名：.xxx .xxx .xxx</p>
-                              </div>
-                              <button class="btn btn-default">播放录音</button>
+                                <div class="fileinput-box">
+                                    <span class="btn btn-default fileinput-button">
+                                      <i class="fa fa-fw fa-upload"></i>
+                                      <span>上传文件</span>
+                                      <input type="file" class="file-ipt" name="files[]">
+                                    </span>
+                                    <p class="audio-type">支持扩展名：mp3</p>
+                                  </div>
                             </div>
                           </div>
                           <div class="form-group col-xs-12">
