--- a/src/html/synchronize.html
+++ b/src/html/synchronize.html
@@ -279,7 +279,7 @@
                 <ul class="jq-xc-table xc-position" style="height: 290px;">
                   <li class="one active">
                     <span title="启蒙课程">启蒙课程</span>
-                    <button type="button" class="btn pull-right btn-primary jq-del-j">删除</button><!-- <button type="button"data-toggle="modal" data-target="#xgjieduan" class="btn pull-right btn-primary jq-change-j">修改</button> -->
+                    <!-- <button type="button" class="btn pull-right btn-primary jq-del-j">删除</button><button type="button"data-toggle="modal" data-target="#xgjieduan" class="btn pull-right btn-primary jq-change-j">修改</button> -->
                     <ul class="two">
                       <li class="active">
                         <span title="启蒙教材">启蒙教材</span>
