--- a/src/html/27_readText_4.html
+++ b/src/html/27_readText_4.html
@@ -93,10 +93,10 @@
           <div class="pent-body">
             <div class="readText-box">
               <div class="readText-blank" id="readText-blank">
-                <div class="readText-blank-item">Are you <div class="readText-blank-div"><input type="text"/></div> ? </div>
-                <div class="readText-blank-item"><div class="readText-blank-div"><input type="text"/></div> , I am.</div>
-                <div class="readText-blank-item">Nice to <div class="readText-blank-div"><input type="text"/></div> you, Linda. </div>
-                <div class="readText-blank-item">Nice to <div class="readText-blank-div"><input type="text"/></div> you, too. </div>
+                <div class="readText-blank-item">Are you <div class="readText-blank-div"><input class="xc-reload-input" reloadLength='4' type="text"/></div> ? </div>
+                <div class="readText-blank-item"><div class="readText-blank-div"><input class="xc-reload-input" reloadLength='4' type="text"/></div> , I am.</div>
+                <div class="readText-blank-item">Nice to <div class="readText-blank-div"><input class="xc-reload-input" reloadLength='4' type="text"/></div> you, Linda. </div>
+                <div class="readText-blank-item">Nice to <div class="readText-blank-div"><input class="xc-reload-input" reloadLength='4'type="text"/></div> you, too. </div>
                 <div class="readText-blank-item">The voyages of ZhengHe</div>
                 <div class="readText-blank-item">Zheng He was a famous Chinese explorer.</div>
               </div>
