--- a/src/html/29_finish_grammar.html
+++ b/src/html/29_finish_grammar.html
@@ -127,7 +127,7 @@
                       <div class="reword-list">
                         <div class="reword-litem">
                           <img class="reword-icon" src="../img/029/group32x.png" alt="">
-                          <p class="reword-tip1">互相学习</p>
+                          <p class="reword-tip1">互动学习</p>
                           <p class="reword-tip2">已完成<span>2</span>次</p>
                           <button class="reword-tip3">继续学习</button>
                         </div>
