--- a/src/html/12_course.html
+++ b/src/html/12_course.html
@@ -233,10 +233,10 @@
           <div class="course-head-bottom">
             <div class="course-head-courses">
               <div class="course-head-course active">智能复习 12</div>
-              <div class="course-head-course">听音写词(2)</div>
-              <div class="course-head-course">看词拼写(2)</div>
-              <div class="course-head-course">看字组句(2)</div>
-              <div class="course-head-course">看字拼句(2)</div>
+              <div class="course-head-course"><a href="javascript:void(0)">听音写词(2)</a></div>
+              <div class="course-head-course"><a href="javascript:void(0)">看词拼写(2)</a></div>
+              <div class="course-head-course"><a href="javascript:void(0)">看字组句(2)</a></div>
+              <div class="course-head-course"><a href="javascript:void(0)">看字拼句(2)</a></div>
             </div>
             <div class="course-btn">立即复习</div>
           </div>
