加了一部分链接
加了一部分链接

--- a/src/html/14_sentence.html
+++ b/src/html/14_sentence.html
@@ -76,9 +76,9 @@
     <div class="main words-main">
       <div class="xc-container">
         <div class="xc-brand">
-          <a class="link" href="javscript:;">课程中心</a>
+          <a class="link" href="./03_index.html">课程中心</a>
           <em class="line">/</em>
-          <a class="link" href="javscript:;">同步课程</a>
+          <a class="link" href="./12_course.html">同步课程</a>
           <em class="line">/</em>
           <span>句子册</span>
         </div>
@@ -98,7 +98,7 @@
                 <img src="../img/word-select.png" alt="下拉" class="xc-head-selectImg">
               </div>
             </div>
-            <a class="return" href="javscript:;">返回课程中心</a>
+            <a class="return" href="./03_index.html">返回课程中心</a>
           </div>
           <div class="xc-head-bottom">
             <div class="xc-head-categories">
