--- a/src/html/27_readText_1.html
+++ b/src/html/27_readText_1.html
@@ -76,9 +76,9 @@
     <div class="main readText-main">
       <div class="xc-container">
         <div class="xc-brand">
-          <a class="link" href="javscript:;">课程中心</a>
+          <a class="link" href="./03_index.html">课程中心</a>
           <em class="line">/</em>
-          <a class="link" href="javscript:;">同步课程</a>
+          <a class="link" href="./12_course.html">同步课程</a>
           <em class="line">/</em>
           <span>课文跟读</span>
         </div>
