--- a/src/html/12_course.html
+++ b/src/html/12_course.html
@@ -232,7 +232,7 @@
           </div>
           <div class="course-head-bottom">
             <div class="course-head-courses">
-              <div class="course-head-course active">智能复习 12</div>
+              <div class="course-head-course active_always">智能复习 12</div>
               <div class="course-head-course"><a href="./18_study_word.html">听音写词(2)</a></div>
               <div class="course-head-course"><a href="./17_study_word.html">看字拼词(2)</a></div>
               <div class="course-head-course"><a href="./24_setence_combining.html">看字组句(2)</a></div>
